# biocpp

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
inc/biocpp/: algorithms.h  alignment.h  biocpp.h  files.h  io.h  mol_seq.h  molecules.h
src/: CMakeLists.txt  alignment.cc  files.cc  mol_seq.cc
src/algorithms/: CMakeLists.txt  alignment.cc
src/io/: CMakeLists.txt  files.cc
src/molecules/: CMakeLists.txt  gene_material.cc  mol_seq.cc
tests/: biocpp_tests.cc  mol_seq_tests.cc
tests/molecules/: dna_unittest.cc  mol_seq_tests.cc
